# nextjs-auth-playground

./: .env.example  README.md  package.json
openfga/: model.fga  model.json  values.yaml
scripts/: down.sh  listRoutes.js  up.sh  update.sh
scripts/openfga/: check.mjs  model.dsl  model.json  read-all.mjs  seed.js  seed.mjs  utils.mjs  write.mjs
src/: middleware.ts
src/components/: profile.tsx
src/lib/: authz.ts  dotenv.ts  endpoint.ts
src/lib/tasks/: io.ts
src/lib/tasks/openfga/: migrate.ts  transform.ts  utils.ts
src/pages/: index.tsx
src/pages/api/: hello.ts  session.ts  wall.ts
src/pages/api/[document]/: read.ts  write.ts
src/pages/api/proxy/: [...path].ts
src/pages/api/proxy/isolate/: endpoint.ts
tests/: collection.http  openfga.sh
tools/: openfga  pyproject.toml
tools/scripts/: model.sh
tools/src/tasks/: io.py
tools/src/tasks/openfga/: migrate.py  utils.py
tools/tests/: test_auth_model.py
